adição de novos estilos

--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AluraBooks</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="reset.css" />
   </head>
   <body>
-    <header></header>
-    <main>
-        <h1>Hello Word</h1>
-    </main>
+    <header class="cabecalho">
+      <div class="icons__lado__esquerdo">
+        <img src="assets/Menu.svg" alt="Botão de Menu" />
+        <img src="assets/Logo.svg" alt="Logo do Sistema" />
+      </div>
+      <div class="icons__lado__direito">
+        <a href=""><img src="assets/Favoritos.svg" alt="Ícone de Favoritos"/><a>
+        <a href=""><img src="assets/Sacola.svg" alt="Ícone de Sacola" /></a>
+        <a href=""><img src="assets/Usuario.svg" alt="Ícone de Usuário" /></a>
+      </div>
+    </header>
+    <main></main>
     <footer></footer>
   </body>
 </html>
