--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
@@ -51,13 +55,49 @@
           alt="Logo do Sistema"
           class="container__image"
         />
+        <h1 class="container__titulo">
+          <b class="container__titulo--negrito">Alura</b>Books
+        </h1>
       </div>
+
+      <ul class="container__opções">
+        <input type="checkbox" id="opções-menu" class="opções-botão" />
+        <label for="opções-menu">
+          <li class="container__itens">Categorias</li>
+        </label>
+
+        <ul class="lista-menu">
+          <li class="lista-menu__item">
+            <a href="" class="lista-menu__link">PROGRAMAÇÃO</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="" class="lista-menu__link">FRONT-END</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="" class="lista-menu__link">INFRAESTRUTURA</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="" class="lista-menu__link">BUSINESS</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="" class="lista-menu__link">DESING & UX</a>
+          </li>
+        </ul>
+
+        <li class="container__itens">
+          <a href="#" class="container__links">Favoritos</a>
+        </li>
+        <li class="container__itens">
+          <a href="#" class="container__links">Minha estante</a>
+        </li>
+      </ul>
+
       <div class="container">
         <a href="#"
           ><img
             src="assets/Favoritos.svg"
             alt="Ícone de Favoritos"
-            class="container__image"
+            class="container__image container__image--favoritos"
         /></a>
         <a href="#"
           ><img
@@ -225,13 +265,12 @@
           <div class="card__descrição">
             <!-- 1º coluna -->
             <div class="descrição">
-              <img src="assets/Estrelinhas.svg" alt="estrelas">
-              <h3 class="descrição__titulo">
-                Autora do Mês
-              </h3>
+              <img src="assets/Estrelinhas.svg" alt="estrelas" />
+              <h3 class="descrição__titulo">Autora do Mês</h3>
               <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
               <p class="descrição__texto">
-                Analista de sistemas e escritora, Juliana é especialista em Front-End. 
+                Analista de sistemas e escritora, Juliana é especialista em
+                Front-End.
               </p>
             </div>
             <!-- 2º coluna -->
@@ -287,20 +326,109 @@
           </li>
         </ul>
       </section>
-
     </main>
-  
-      <section class="contato">
-        <h2 class="contato__titulo">Fique por dentro das novidades</h2>
-        <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
-        <input type="email" placeholder="Cadastre seu email" class="contato__email">
-      </section>
 
+    <section class="contato">
+      <div class="contato__descricao">
+        <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+        <p class="contato__texto">
+          Atualizações de e-books, novos livros, promoções e outros.
+        </p>
+      </div>
+      <input
+        type="email"
+        placeholder="Cadastre seu email"
+        class="contato__email"
+      />
+    </section>
 
-      <hr>
-      <footer class="rodapé">
-        <h2 class="radapé__titulo">Grupo Alura</h2>
-      </footer>
+    <hr />
+
+    <footer class="rodapé">
+      <h2 class="radapé__titulo">Grupo Alura</h2>
+
+      <ul class="educacao">
+        <li class="educacao__curso">
+          <h2 class="rodapé__subtitulo">EDUCAÇÃO</h2>
+        </li>
+        <li class="educacao__curso">
+          <img src="/assets/Caelum.svg" alt="" />
+          <a href="#" class="rodapé__link">Caelum</a>
+        </li>
+        <li class="educacao__curso">
+          <img src="/assets/CasaDoCodigo.svg" alt="" />
+          <a href="#" class="rodapé__link">Casa do Código</a>
+        </li>
+      </ul>
+
+      <ul class="educacao">
+        <li class="educacao__curso">
+          <h2 class="rodapé__subtitulo">EDUCAÇÃO ONLINE</h2>
+        </li>
+        <li class="educacao__curso">
+          <img src="/assets/Alura.svg" alt="" />
+          <a href="#" class="rodapé__link">Alura</a>
+        </li>
+        <li class="educacao__curso">
+          <img src="/assets/AluraEmpresas.svg" alt="" />
+          <a href="#" class="rodapé__link">Alura Para Empresas</a>
+        </li>
+        <li class="educacao__curso">
+          <img src="/assets/AluraLATAM.svg" alt="" />
+          <a href="#" class="rodapé__link">Alura Latam</a>
+        </li>
+        <li class="educacao__curso">
+          <img src="/assets/AluraStart.svg" alt="" />
+          <a href="#" class="rodapé__link">Alura Start</a>
+        </li>
+        <li class="educacao__curso">
+          <img src="/assets/MusicDot.svg" alt="" />
+          <a href="#" class="rodapé__link">MusicDot</a>
+        </li>
+        <li class="educacao__curso">
+          <img src="/assets/AluraLingua.svg" alt="" />
+          <a href="#" class="rodapé__link">Alura Língua</a>
+        </li>
+        <li class="educacao__curso">
+          <img src="/assets/PM3.svg" alt="" />
+          <a href="#" class="rodapé__link">PM3</a>
+        </li>
+      </ul>
+
+      <ul class="educacao">
+        <li class="educacao__curso">
+          <h2 class="rodapé__subtitulo">COMUNIDADE</h2>
+        </li>
+        <li class="educacao__curso">
+          <img src="/assets/HipstersTech.svg" alt="" />
+          <a href="#" class="rodapé__link">Hipsters ponto Tech</a>
+        </li>
+        <li class="educacao__curso">
+          <img src="/assets/ScubaDev.svg" alt="" />
+          <a href="#" class="rodapé__link">Scuba Dev</a>
+        </li>
+        <li class="educacao__curso">
+          <img src="/assets/LayersTech.svg" alt="" />
+          <a href="#" class="rodapé__link">Layers ponto Tech</a>
+        </li>
+        <li class="educacao__curso">
+          <img src="/assets/LikeABoss.svg" alt="" />
+          <a href="#" class="rodapé__link">Like a Boss</a>
+        </li>
+        <li class="educacao__curso">
+          <img src="/assets/CarreiraSemFronteira.svg" alt="" />
+          <a href="#" class="rodapé__link">Carreira sem Fronteira</a>
+        </li>
+        <li class="educacao__curso">
+          <img src="/assets/HipstersJobs.svg" alt="" />
+          <a href="#" class="rodapé__link">Hipsters ponto Jobs</a>
+        </li>
+        <li class="educacao__curso">
+          <img src="/assets/GUJ.svg" alt="" />
+          <a href="#" class="rodapé__link">GUJ</a>
+        </li>
+      </ul>
+    </footer>
 
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script>
